--- a/server/database/prisma.yml
+++ b/server/database/prisma.yml
@@ -3,3 +3,4 @@ secret: mysecret123
 hooks:
   post-deploy:
     - yarn graphql get-schema --project database
+endpoint: https://us1.prisma.sh/brady-caspar-38b397/database/dev
